Fix navbar overlapping bug

--- a/Symfony/web/css/base.css
+++ b/Symfony/web/css/base.css
@@ -1,3 +1,8 @@
+body {
+    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
+    padding-bottom: 50px;
+}
+
 body, html {
     width: 100%;
     height: 100%;
